--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -1,19 +1,13 @@
 .dashboard-container {
   height: 100vh;
 
-  /*.column {
-    background-color: #303f9f;
-    border: 1px solid #607d8b;
-    color: white;
-  }
-*/
-
   .menu-zone {
     background-color: #303f9f;
   }
 
-  .content-zone {
-    background-color: #607d8b;
+  .content-zone{
+    padding: 16px;
+    overflow-y: scroll;
   }
 
   .layout {
