--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -2,7 +2,6 @@
     height: 80px;
     display: flex;
     align-items: center;
-    margin-bottom: 11.5px;
     background-color: yellow;
 
   }
